Fixed digit displays on mobile. Changed fullscreen button.

--- a/style.css
+++ b/style.css
@@ -82,16 +82,16 @@ body, html{
     margin-top: 32px;
 }
 
+.mb-5{
+    margin-bottom: 5px;
+}
+
 .ml-32{
     margin-left: 32px;
 }
 
 .mr-32{
     margin-right: 32px;
-}
-
-.fs-10{
-    font-size: 10px;
 }
 
 .bold{
@@ -177,8 +177,12 @@ body, html{
 
 .label{
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 0.75em;
     color: var(--display-draw)
+}
+
+.message{
+    text-transform: uppercase;
 }
 
 #tetris-message{
@@ -279,7 +283,7 @@ button:active{
 
 .button-label{
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 0.75em;
     color: #333;
 }
 
@@ -301,11 +305,11 @@ button:active{
     position: fixed;
     bottom: 16px;
     right: 16px;
-    font-size: 1rem;
+    font-size: 1em;
     background-color: var(--gray);
-    width: 32px;
-    height: 32px;
-    border-radius: 4px;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
 }
 
 #keys{
@@ -316,4 +320,16 @@ button:active{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media (pointer:coarse) {
+    .pr{
+        top:9px;
+    }
+    #score, #level, #clears, #high-score{
+        margin-bottom: 8px;
+    }
+    .message{
+        font-size: 12px;
+    }
 }
